2025-05-10T12:47:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14945488127 # 968
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-10
* notice: last 14d: unq all: 16 82
* notice: prev accum: outdated-unq outdated-all / unq all: 1063 5425 / 1081 5508
* notice: next accum: outdated-unq outdated-all / unq all: 1064 5426 / 1081 5508
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-26] / []

2025-05-09T12:51:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14929351243 # 966
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-09
* notice: last 14d: unq all: 17 83
* notice: prev accum: outdated-unq outdated-all / unq all: 1060 5404 / 1081 5508
* notice: next accum: outdated-unq outdated-all / unq all: 1063 5425 / 1081 5508
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-25] / []

2025-05-09T02:03:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14919844853 # 965
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-09
* notice: last 14d: unq all: 20 104
* notice: prev accum: outdated-unq outdated-all / unq all: 1059 5403 / 1081 5508
* notice: next accum: outdated-unq outdated-all / unq all: 1060 5404 / 1081 5508
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-24] / []

2025-05-08T02:04:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14897035924 # 963