@@ -1,12 +1,7 @@
 {
-  "count": 82,
-  "uniques": 16,
+  "count": 80,
+  "uniques": 15,
   "views": [
-    {
-      "timestamp": "2025-04-27T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-28T00:00:00Z",
       "count": 8,
